# NaffHackathonConnect4

./: LICENSE.txt  README.md  docker-compose.yml  main.py  pyproject.toml
core/: connect_4.py  init_logging.py  logging.py  misc.py
extensions/: commands.py  events.py
